--- a/src/styles/components/_gallery.scss
+++ b/src/styles/components/_gallery.scss
@@ -1,19 +1,19 @@
 .gallery {
   display: grid;
-  column-gap: 1rem;
-  row-gap: 1rem;
-  grid-template-columns: repeat(5, 1fr);
+  column-gap: 1.5rem;
+  row-gap: 1.5rem;
+  grid-template-columns: repeat(4, 1fr);
 }
 
 @include media-query('lg') {
   .gallery {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
 @include media-query('md') {
   .gallery {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
@@ -23,15 +23,57 @@
   }
 }
 
-
+figure.image {
+  transition-property: box-shadow;
+  transition-duration: .3s;
+  transition-timing-function: ease-in-out;
+  figcaption {
+    padding: .5rem;
+    overflow: hidden;
+  }
+  &:hover {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  }
+}
 .image-wrapper {
   position: relative;
   overflow: hidden;
-  img {
+  img:not(.icon-preview) {
     position: absolute;
     inset: 0;
     height: 100%;
     width: 100%;
     object-fit: cover;
+  }
+  &.preview {
+    cursor: pointer;
+    &::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      opacity: 0;
+      transition: opacity 0.3s ease-in-out;
+    }
+    &:hover::after {
+      opacity: 1;
+    }
+    .icon-preview {
+      position: absolute;
+      bottom: .5rem;
+      right: .5rem;
+      color: #fff;
+      z-index: 10;
+      opacity: 0;
+      transition: opacity 0.3s ease-in-out;
+    }
+    &:hover {
+      .icon-preview {
+         opacity: 1;
+      }
+    }
   }
 }
