--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,4 +22,12 @@ ol, ul {
 
 a {
   text-decoration: none;
+  outline: none;
+}
+
+.truncate {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;  
+  overflow: hidden;
 }
